argocd/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: PathPrefix(`/argocd`) && ClientIP(`10.0.0.0/8`)
    priority: 0
    services:
    - kind: Service
      name: argocd-server
      namespace: argocd
      port: http
